--- a/overview/nonFunctionalRequirements.html
+++ b/overview/nonFunctionalRequirements.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<h1>Nichtfunktionale Anforderungen</h1>
+<h1>Nichtfunktionale Anforderungen ({{ collection.size }})</h1>
 
 <p>
     <b>Nichtfunktionale Anforderungen</b> umfassen alle Anforderungen, die nicht den funktionalen Anforderungen
