--- a/overview/priorization.html
+++ b/overview/priorization.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<h1>Priorisierung</h1>
+<h1>Priorisierung ({{ collection.size }})</h1>
 
 <p>
     (tbd: kurze Erläuterung zum Priorisierungsprozess)
